--- a/Day1/NumpyPandasTut/Numpy.ipynb
+++ b/Day1/NumpyPandasTut/Numpy.ipynb
@@ -6,7 +6,7 @@
         "id": "dzNng6vCL9eP"
       },
       "source": [
-        "# CVIT Workshop Day 1 - Basics"
+        "# CVIT Workshop Day 1 - Numpy"
       ]
     },
     {
